--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -56,7 +56,7 @@
 \suppress_date false
 \justification true
 \use_refstyle 1
-\use_minted 0
+\use_minted 1
 \index Index
 \shortcut idx
 \color #008000
@@ -76,6 +76,7 @@
 \papercolumns 1
 \papersides 1
 \paperpagestyle default
+\listings_params "style=colorful,fontsize={\small}"
 \tracking_changes false
 \output_changes false
 \html_math_output 0
@@ -1326,7 +1327,7 @@ Appendix
 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:Generator-Sample-Instantiation"
+reference "sec:Generator-Sample-Code"
 plural "false"
 caps "false"
 noprefix "false"
@@ -1655,7 +1656,7 @@ Appendix
 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:Generator-Sample-Uninstantiation"
+reference "sec:Generator-Sample-Code"
 plural "false"
 caps "false"
 noprefix "false"
@@ -1705,33 +1706,54 @@ name "sec:Generator-Sample-Code"
 
 \end_layout
 
-\begin_layout Subsection
-Generator Sample Instantiation
-\begin_inset CommandInset label
-LatexCommand label
-name "subsec:Generator-Sample-Instantiation"
+\begin_layout Standard
+This sample code is provided as a reference implementation showing the correct
+ sequence of calls to standard OpenSSL
+\begin_inset space ~
+\end_inset
 
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "OpenSSL"
+literal "false"
+
+\end_inset
+
+ library functions in order to produce the REQUIRED sequence of Contact
+ Identifiers for a given Generator Type and Seed Value.
+\end_layout
+
+\begin_layout Standard
+All input validity checks and error handling are omitted from this sample
+ code in the interests of brevity.
+ This sample code MUST NOT be used verbatim.
+ A more complete reference implementation is available from 
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+https://github.com/ipxe/cx
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
 \end_inset
 
 
 \end_layout
 
-\begin_layout Subsection
-Generator Sample Iteration
-\begin_inset CommandInset label
-LatexCommand label
-name "subsec:Generator-Sample-Iteration"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Subsection
-Generator Sample Uninstantiation
-\begin_inset CommandInset label
-LatexCommand label
-name "subsec:Generator-Sample-Uninstantiation"
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "gen_sample.c"
+lstparams "language=C"
 
 \end_inset
 
