spec: Fix automatically generated citations
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -2,7 +2,7 @@
   author = {Barker, Elaine B. and Kelsey, John M.},
   title = {{SP 800-90A}. {Recommendation} for Random Number Generation Using Deterministic Random Bit Generators},
   year = {2012},
-  publisher = {National Institute of Standards & Technology},
+  institution = {National Institute of Standards \& Technology},
   address = {Gaithersburg, MD, USA},
   url = {https://csrc.nist.gov/publications/detail/sp/800-90a/rev-1/final},
   note = {\url{https://csrc.nist.gov/publications/detail/sp/800-90a/rev-1/final}},
@@ -11,7 +11,7 @@
   author = {Barker, Elaine B. and Kelsey, John M.},
   title = {{SP 800-90C}. {Recommendation} for Random Bit Generator {(RBG)} Constructions (Second Draft)},
   year = {2012 (draft)},
-  publisher = {National Institute of Standards & Technology},
+  institution = {National Institute of Standards \& Technology},
   address = {Gaithersburg, MD, USA},
   url = {https://csrc.nist.gov/publications/detail/sp/800-90c/draft},
   note = {\url{https://csrc.nist.gov/publications/detail/sp/800-90c/draft}},
@@ -26,7 +26,7 @@
   month = {July},
   issn = {2070-1721},
   publisher = {RFC Editor},
-  institution = {RFC Editor},
+  institution = {IETF},
   url = {https://tools.ietf.org/html/rfc4122},
   note = {\url{https://tools.ietf.org/html/rfc4122}},
 }
@@ -34,13 +34,13 @@
   author = {Scott Bradner},
   title = {Key words for use in {RFCs} to Indicate Requirement Levels},
   howpublished = {Internet Requests for Comments},
-  type = {BCP},
-  number = {14},
+  type = {RFC},
+  number = {2119},
   year = {1997},
   month = {March},
   issn = {2070-1721},
   publisher = {RFC Editor},
-  institution = {RFC Editor},
+  institution = {IETF},
   url = {https://tools.ietf.org/html/rfc2119},
   note = {\url{https://tools.ietf.org/html/rfc2119}},
 }
