spec: Create first draft of Seed Calculator functionality
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -44,6 +44,29 @@
   url = {https://tools.ietf.org/html/rfc2119},
   note = {\url{https://tools.ietf.org/html/rfc2119}},
 }
+@techreport{RFC5280,
+  author = {D. Cooper and S. Santesson and S. Farrell and S. Boeyen and R. Housley and W. Polk},
+  title = {Internet {X.509} Public Key Infrastructure Certificate and Certificate Revocation List {(CRL)} Profile},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {5280},
+  year = {2008},
+  month = {May},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {IETF},
+  url = {https://tools.ietf.org/html/rfc5280},
+  note = {\url{https://tools.ietf.org/html/rfc5280}},
+}
+@misc{X.690,
+  author = {{International Telecommunication Union}},
+  title = {Information Technology --- {ASN.1} Encoding Rules --- Specification of Basic Encoding Rules {(BER)}, Canonical Encoding Rules {(CER)}, and Distinguished Encoding Rules {(DER)}},
+  howpublished = {ITU-T Recommendation X.690},
+  year = {2002},
+  month = {July},
+  url = {https://www.itu.int/rec/T-REC-X.690/},
+  note = {\url{https://www.itu.int/rec/T-REC-X.690/}},
+}
 @misc{OpenSSL,
   title = {{OpenSSL} library},
   url = {https://www.openssl.org/},
