--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -99,7 +99,7 @@ customHeadersFooters
 \papercolumns 1
 \papersides 1
 \paperpagestyle fancy
-\listings_params "style=colorful,fontsize={\small}"
+\listings_params "style=colorful,fontsize={\small},samepage=true"
 \tracking_changes false
 \output_changes false
 \html_math_output 0
@@ -2942,13 +2942,6 @@ https://github.com/ipxe/cx
 \end_layout
 
 \begin_layout Standard
-\begin_inset Newpage pagebreak
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand inputminted
 filename "gen_sample.c"
@@ -3117,6 +3110,53 @@ Seed Calculator Sample Code
 \begin_inset CommandInset label
 LatexCommand label
 name "sec:Seed-Calculator-Sample"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This sample code is provided as a reference implementation showing the correct
+ sequence of calls to standard OpenSSL
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "OpenSSL"
+literal "false"
+
+\end_inset
+
+ library functions in order to produce the REQUIRED Seed Value for a given
+ Generator Type, Preseed Value, and Preseed Verification Key.
+\end_layout
+
+\begin_layout Standard
+All input validity checks and error handling are omitted from this sample
+ code in the interests of brevity.
+ This sample code MUST NOT be used verbatim.
+ A more complete reference implementation is available from 
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+https://github.com/ipxe/cx
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_sample.c"
+lstparams "language=C"
 
 \end_inset
 
