--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -3174,5 +3174,375 @@ name "sec:Seed-Calculator-Test"
 
 \end_layout
 
+\begin_layout Standard
+Each test vector input comprises a Preseed Value and a Preseed Verification
+ Key (shown in PEM form).
+\end_layout
+
+\begin_layout Standard
+Each test vector output comprises a Seed Value that MUST be constructed
+ by using the Seed Calculator.
+\end_layout
+
+\begin_layout Subsection
+Generator Type 1, natural number preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+A
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 1 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from the first 24 natural numbers and public
+ key 
+\begin_inset Quotes eld
+\end_inset
+
+A
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "fensystems.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type1_test1.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Generator Type 1, natural number preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 1 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from the first 24 natural numbers and public
+ key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "ipxe.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type1_test2.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Generator Type 1, random preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 1 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from 24 randomly chosen bytes and public key
+ 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "ipxe.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type1_test3.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Generator Type 2, natural number preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+A
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 2 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from the first 48 natural numbers and public
+ key 
+\begin_inset Quotes eld
+\end_inset
+
+A
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "fensystems.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type2_test1.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Generator Type 2, natural number preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 2 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from the first 48 natural numbers and public
+ key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "ipxe.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type2_test2.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Generator Type 2, random preseed, public key 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+This test vector uses Generator Type 2 (as defined in section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Generator-Types"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+) with a preseed constructed from 48 randomly chosen bytes and public key
+ 
+\begin_inset Quotes eld
+\end_inset
+
+B
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "ipxe.pubkey.pem"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand inputminted
+filename "seedcalc_type2_test3.c"
+lstparams "language=C"
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
